interactive map done

--- a/package.json
+++ b/package.json
@@ -2,17 +2,27 @@
   "name": "city_report_system",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.100.8:8080",
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.114",
+    "@mui/material": "^5.11.3",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.3",
     "axios": "^1.2.0",
     "i18next": "^22.0.6",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
+    "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
