--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.11.3",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/system": "^5.11.9",
+    "@mui/x-data-grid": "^5.17.24",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
