--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "city_report_system",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://192.168.100.8:8080",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@emotion/react": "^11.10.5",
