--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "axios": "^1.2.0",
     "i18next": "^22.0.6",
     "leaflet": "^1.9.3",
+    "leaflet-draw": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
     "react-leaflet": "^4.2.0",
+    "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
