manager app basic func

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "@mui/system": "^5.11.9",
     "@mui/x-data-grid": "^5.17.24",
+    "@mui/x-date-pickers": "^6.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.3",
     "axios": "^1.2.0",
+    "dayjs": "^1.11.7",
     "i18next": "^22.0.6",
     "leaflet": "^1.9.3",
     "leaflet-draw": "^1.0.4",
@@ -29,6 +31,7 @@
     "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "recharts": "^2.4.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
